[gd_scene load_steps=6 format=3 uid="uid://dpdx8stfsfj3i"]

[ext_resource type="PackedScene" uid="uid://b6unoux6lpd32" path="res://UI/ETContainer/ETContainer.tscn" id="1_yaeg7"]
[ext_resource type="Script" path="res://UI/Scenes/MainMenu/Menu/MenuUI.gd" id="2_jtqsb"]
[ext_resource type="FontFile" uid="uid://cw1n407ockhoc" path="res://Assets/Fonts/Frijole-Regular.ttf" id="3_d80db"]
[ext_resource type="Theme" uid="uid://cp5i06p51kd6i" path="res://Assets/MenuTheme.tres" id="3_dw6lg"]

[sub_resource type="LabelSettings" id="LabelSettings_0fjcn"]
font = ExtResource("3_d80db")
font_size = 154

[node name="MainMenu" instance=ExtResource("1_yaeg7")]
script = ExtResource("2_jtqsb")

[node name="Label" type="Label" parent="." index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 106.0
offset_right = 1.0
offset_bottom = -761.0
grow_horizontal = 2
grow_vertical = 2
text = "Banshee Bash
"
label_settings = SubResource("LabelSettings_0fjcn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]
layout_mode = 0
offset_left = 1274.0
offset_top = 455.0
offset_right = 1590.0
offset_bottom = 871.0

[node name="Debug" type="Button" parent="VBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_dw6lg")
text = "Debug
"

[node name="Start" type="Button" parent="VBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_dw6lg")
text = "Start Game"

[node name="Settings" type="Button" parent="VBoxContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_dw6lg")
text = "Settings
"

[node name="Credits" type="Button" parent="VBoxContainer" index="3"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_dw6lg")
text = "Credits
"

[node name="Quit" type="Button" parent="VBoxContainer" index="4"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_dw6lg")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Debug" to="." method="_on_debug_pressed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
